<resources>
    <string name="app_name">OwlMapp</string>
    <string name="google_maps_key">AIzaSyD9e2DAO-Mz9iuTvyUng_V2wA3iTiouqLw</string>

    <string-array name="unLugares">
        <item> 101 Torre de Enfermería </item>
        <item> 102 Biblioteca Central Gabriel García Márquez </item>
        <item> 103 Polideportivo </item>
        <item> 104 Auditorio León de Greiff </item>
        <item> 201 Facultad de Derecho, Ciencias Políticas y Sociales </item>
        <item> 205 Edificio Orlando Fals Borda: Departamento de Sociología </item>
        <item> 207 Museo de Arquitectura Leopoldo Rother </item>
        <item> 210 Facultad de Odontología </item>
        <item> 211 Cafetería de Odontología </item>
        <item> 212 Aulas de Ciencias Humanas </item>
        <item> 213 Restaurante "Campus" de Ciencias Humanas </item>
        <item> 214 Edificio Antonio Nariño - Departamento de Lingüística. Departamento de Ingeniería Civil y Agrícola </item>
        <item> 217 Edificio Francisco de Paula Santander: Diseño Gráfico </item>
        <item> 224 Edificio Manuel Ancízar </item>
        <item> 225 Edificio Rogelio Salmona de Postgrados en Ciencias Humanas </item>
        <item> 229 Departamento de lenguas extranjeras </item>
        <item> 230 Banco Popular </item>
        <item> 231 Idiomas </item>
        <item> 235 Portería Peatonal Calle 26 </item>
        <item> 238 Contaduria / Postgrados de Ciencias Económicas </item>
        <item> 239 Filosofía </item>
        <item> 251 Capilla </item>
        <item> 301 Escuela de Artes Plásticas </item>
        <item> 303 Escuela de Arquitectura </item>
        <item> 305 Conservatorio de Música </item>
        <item> 309 Talleres y Aulas de Construcción </item>
        <item> 310 Facultad de Ciencias Económicas </item>
        <item> 311 Bloque II Facultad de Ciencias Económicas </item>
        <item> 314 Postgrados en Arquitectura - SINDU </item>
        <item> 317 Museo de Arte </item>
        <item> 401 Facultad de Ingeniería / Edificio Viejo </item>
        <item> 403 Cafetería Don Lucho / Caseta de comestibles </item>
        <item> 404 Departamentos de Matemáticas, Física y Estadística / Yu Takeuchi </item>
        <item> 405 Postgrados en Matemáticas y Física </item>
        <item> 406 IEI / Instituto de Extensión e Investigación </item>
        <item> 407 Postgrados en Materiales y Procesos de Manufactura </item>
        <item> 408 Laboratorio de Ensayos Hidráulicos </item>
        <item> 409 Laboratorio de Hidráulica </item>
        <item> 410 Playa de Modelos </item>
        <item> 411 Laboratorios de Ingeniería </item>
        <item> 412 Laboratorio de Ingeniería Química </item>
        <item> 413 Observatorio Astronómico </item>
        <item> 414 Canchas de Tenis T-2, T-3 y T-4 </item>
        <item> 421 Departamento de Biología </item>
        <item> 425 Instituto de Ciencias Naturales </item>
        <item> 426 Instituto de Genética </item>
        <item> 433 Almacén e Imprenta / Taller de Imprenta </item>
        <item> 434 Instituto Pedagógico Arturo Ramírez Montúfar IPARM </item>
        <item> 435 Talleres de Mantenimiento </item>
        <item> 436 Parque Automotor </item>
        <item> 437 Centro de Acopio de Residuos Sólidos </item>
        <item> 438 Talleres y Gestiones de Mantenimiento </item>
        <item> 450 Departamento de Farmacia </item>
        <item> 451 Departamento de Química </item>
        <item> 452 Postgrados en Bio/Química y Carbones </item>
        <item> 453 Aulas de Ingeniería </item>
        <item> 454 CYT / Ciencia y Tecnología </item>
        <item> 471 Facultad de Medicina </item>
        <item> 472 Subestación Eléctrica </item>
        <item> 473 Perrera </item>
        <item> 476 Facultad de Ciencias </item>
        <item> 477 Aulas de Informática </item>
        <item> 480 CEMU / Depósitos Facultad de Medicina </item>
        <item> 481 Facultad de Medicina Veterinaria y Zootecnia </item>
        <item> 495 Cancha de T1 / Tennis court </item>
        <item> 500 Agronomía / Facultad de Ciencias Agrarias </item>
        <item> 500A Planta de Leches y Vegetales </item>
        <item> 500B Planta de Carnes </item>
        <item> 500D Supermercado y Aulas </item>
        <item> 500E Caseta de Máquinas </item>
        <item> 571 Hemeroteca Nacional </item>
        <item> 603 Portería Calle 45 </item>
        <item> 701 Departamento de Cine y Televisión </item>
        <item> 710 Diamante de Béisbol </item>
        <item> 731 Estadio de fútbol "Alfonso López Pumarejo" </item>
        <item> 761 Concha Acústica </item>
        <item> 861 Edificio Uriel Gutiérrez </item>
        <item> 862 Unidad Camilo Torres </item>
        <item> 901 Portería Vehicular y Peatonal Calle 53 </item>
        <item> 905 Jardín Infantil </item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_build_detail">BuildDetailActivity</string>
    <string name="version">Versión</string>
    <string name="developed_by">Desarrollado por</string>
    <string name="designed_by">Diseñado por</string>
    <string name="special_thanks">Agradecimientos especiales</string>
    <string name="thanks_for_use">Gracias por usar la app</string>
</resources>
